# frankfurter-api

./: README.md  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: release.yml  ruff.yaml  test.yml
src/: main.py
